--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "quiz-server",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "WebSocket server for quiz game",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "ws": "^8.0.0"
+    "express": "^4.18.2",
+    "stripe": "^10.16.0"
   }
 }
