--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "Camping reservation backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "stripe": "^10.16.0"
   }
